--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -6,6 +6,6 @@ body footer {
     display:flex; 
     justify-content: center;
     align-items:center; 
-    position:fixed; 
+    position: static; 
     bottom: 0
 }
