--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -2,6 +2,6 @@ body header {
     background:#FF0000;
     height:70px;
     width:100%; 
-    position:fixed;
+    position: static;
     top: 0
 }
