--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -5,7 +5,7 @@ body footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position:fixed; 
+    position: static; 
     bottom: 0;
     width: 100%;
 }
