--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -20,6 +20,7 @@
 }
 
 .filter-dropdown ul.popover{
+    background: #FFFFFF;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -104,6 +105,7 @@
 }
 
 .filters .locations .location-dropdown{
+    position: relative;
     padding: 0;
     width: 100%;
     margin: 3px 0 0 -1px;
@@ -112,10 +114,11 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     background: #FAFAFA;
-    z-index: 20;
+    z-index: 30;
 }
 
 .filters .amenities .amenities-dropdown{
+    position: relative;
     padding: 0;
     width: 50%;
     margin: 3px 0 0 -1px;
@@ -124,7 +127,7 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     background: #FAFAFA;
-    z-index: 20;
+    z-index: 30;
 }
 
 .filters .locations .location-dropdown ul.popover {
